2011-10-18  Sam Weinig  <sam@webkit.org>

        Move uses of C SPI out of WKView.h and into WKViewPrivate.h
        https://bugs.webkit.org/show_bug.cgi?id=70387

        Reviewed by Dan Bernstein.

        * UIProcess/API/mac/WKViewPrivate.h:
        Move declarations here.

        * UIProcess/API/mac/WKView.h:
        * UIProcess/API/mac/WKView.mm:
        (-[WKView _updateRemoteAccessibilityRegistration:]):
        (-[WKView initWithFrame:]):
        (-[WKView initWithFrame:contextRef:]):
        (-[WKView _registerDraggedTypes]):
        (-[WKView initWithFrame:contextRef:pageGroupRef:]):
        (-[WKView pageRef]):
        (-[WKView canChangeFrameLayout:]):
        (-[WKView printOperationWithPrintInfo:forFrame:]):
        (-[WKView setFrame:andScrollBy:]):
        Move definitions to private category.

        * UIProcess/API/mac/PDFViewController.mm:
        * UIProcess/mac/WKFullScreenWindowController.mm:
        * UIProcess/mac/WebInspectorProxyMac.mm:
        Update to include WKViewPrivate.h where necessary.

2011-10-18  Sam Weinig  <sam@webkit.org>

        Stop leaking internal names in WKView API header
        https://bugs.webkit.org/show_bug.cgi?id=70380

        Reviewed by Anders Carlsson.

        Move _frameSizeUpdatesDisabledCount to WKViewData. Since we cannot change the size of
        WKView due to the fragile Objective-C ABI, we must rename the existing variable unused. If
        drop 32-bit support, we will be able to remove it.

        * UIProcess/API/mac/WKView.h:
        * UIProcess/API/mac/WKView.mm:
        (-[WKView disableFrameSizeUpdates]):
        (-[WKView enableFrameSizeUpdates]):
        (-[WKView frameSizeUpdatesDisabled]):
        * WebKit2.xcodeproj/project.pbxproj:

2011-10-18  Alexey Proskuryakov  <ap@apple.com>

        Expose PDF information in hit test result
        https://bugs.webkit.org/show_bug.cgi?id=70353

        Reviewed by Sam Weinig.

        * Shared/WebHitTestResult.cpp: